--- a/assets/styles/modules/night-theme.css
+++ b/assets/styles/modules/night-theme.css
@@ -1,4 +1,4 @@
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
     ::selection {
         background-color: var(--color-lightgrey-1);
         color: var(--color-darkgrey-1);
@@ -38,9 +38,32 @@
         padding: var(--spacing-xsmall);
     }
 
-    .select__navigation {
-        /* Temporaire */
+    .select__navigation--desktop {
         color: var(--color-lightgrey-1);
+    }
+
+    .navigation__menu--mobile {
+        background-color: var(--color-darkgrey-1);
+    }
+    
+    .navigation__menu__link,
+    .navigation__menu__link--mobile {
+        display: inline-flex;
+        color: var(--color-lightgrey-1);
+    }
+    
+    .navigation__menu__link--mobile:focus {
+        background-color: var(--color-movie-laugh);
+        color: var(--color-darkgrey-1);
+    }
+    
+    .select__navigation--mobile {
+        color: var(--color-lightgrey-3);
+    }
+
+    .select__navigation--mobile:focus {
+        background-color: var(--color-lightgrey-3);
+        color: var(--color-darkgrey-1);
     }
 
     .button,
@@ -66,9 +89,10 @@
                     background-color 0.1s ease-in;
     }
     
-    .button--icon:hover {
-        border: 1px solid var(--color-movie-dark);
-        background-color: var(--color-movie-dark);
+    .button--icon:hover,
+    .button--icon:focus {
+        border: 1px solid var(--color-movie-laugh);
+        background-color: var(--color-movie-laugh);
     }
     
     .button--icon:hover .icon--menu--mobile path {
@@ -77,10 +101,6 @@
 
     .icon--menu--mobile  {
         stroke: var(--color-lightgrey-1);
-    }
-
-    .button--icon--menu {
-        display: none;
     }
 
     a,
